--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -L",
+    "start": "nodemon server.js",
     "test": "mocha -w ./tests/**/*.spec.js  --exit"
   },
   "author": "Henry",
